# copy-gum-new

./: .gitignore  BACKEND-DATABASE-PROBLEMS-ANALYSIS.md  DRAG-DROP-FIX-TEST-RESULTS.md  MODULE-2-DEFERRED-FEATURES.md  MODULE-5-CLIPBOARD-MONITORING-PLAN.md  MODULE-5-PHASE-1-AUDIT.md  MODULE-5-PHASE-2-AUDIT.md  MODULE-5-PHASE-3-COMPLETION-AUDIT.md  MODULE-5-PHASE-3-SUMMARY.md  MODULE-6-COMPLETION-STATUS.md  MODULE-6-FRONTEND-INTEGRATION-PLAN.md  MODULES-7-13-PLANNING.md  NEXT-STEPS.md  PHASE-3-BACKEND-INTEGRATION.md  PROJECT-STATUS.md  README.md  SESSION-SUMMARY.md  TAG-DISPLAY-FIX-COMPLETE.md  TAG-DISPLAY-PROBLEM-ANALYSIS.md  TAG-FIXES-SUMMARY.md  TAG-ISSUES-ANALYSIS.md  TEXT-SELECTION-FIX-SUMMARY.md  color-card-demo.html  image-card-demo.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
dist-release/: README.md
src/: App.svelte
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql
src-tauri/src/: app_detector.rs  app_icons.rs  clipboard_monitor.rs  content_detector.rs  export.rs  image_handler.rs  main.rs  settings.rs  updater.rs  window_manager.rs
src-tauri/src/db/: mod.rs  schema.sql
src/lib/__tests__/: eventBus.test.ts  exportImport.test.ts  settings.test.ts
src/lib/components/cards/: CardsContainer.svelte  CategoryDropdown.svelte  ClipboardCard.svelte  SkeletonCard.svelte  TagDropdown.svelte
src/lib/components/categories/: CategoriesSection.svelte  CategoryEditPanel.svelte  CategoryPill.svelte
src/lib/components/core/: OverlayPanel.svelte
src/lib/components/header/: AdvancedFiltersPanel.svelte  LogoSection.svelte  SearchBar.svelte  SettingsButton.svelte  SettingsDropdown.svelte  SplitAddButton.svelte
src/lib/components/help/: ShortcutsHelp.svelte
src/lib/components/ui/: AppearancePanel.svelte  ConfirmModal.svelte  EmptyState.svelte  ExportImportPanel.svelte  GlassEffect.svelte  KeyboardShortcutsPanel.svelte  MiniTooltip.svelte  SetupWizard.svelte  SvgFilters.svelte  Toast.svelte  ToastContainer.svelte
src/lib/events/: eventBus.ts
src/lib/services/: database.ts  exportService.ts  settings.ts
src/lib/stores/: categoryStore.ts  clipboardStore.ts  dragStore.ts  keyboardStore.ts  navigationStore.ts  settingsStore.ts  tagStore.ts  toastStore.ts
src/lib/types/: settings.ts
src/lib/utils/: clickOutside.ts  exportImport.ts  keyboardManager.ts
src/styles/: global.css
website/: index.html
