[package]
name = "copygum-app"
version = "1.0.0"
description = "A modern clipboard manager built with Tauri"
authors = ["CopyGum Team"]
license = "MIT"
edition = "2021"

[lints.rust]
# Suppress cfg warnings from objc crate macros (old version uses deprecated cfg patterns)
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(feature, values(\"cargo-clippy\"))"] }

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-clipboard-manager = "2.0"
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-updater = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
image = "0.25"
tokio = { version = "1.48.0", features = ["full"] }
regex = "1.12.2"
fastrand = "2.3.0"
arboard = { version = "3.6.1", features = ["image-data"] }
once_cell = "1.19"
base64 = "0.22"

# macOS app detection
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

# Windows app detection and window management
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus"
] }

[dev-dependencies]
tempfile = "3.10"
